prices ui update 2

--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -470,164 +470,116 @@
             <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
               <img src="images/DryFig.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Anjeer</h2>
-              <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
-                  <td>1 kg</td>
-                  <td>Rs. 1400</td>
-                </tr>
-                <tr>
-                  <td>500 g</td>
-                  <td>Rs. 700</td>
-                </tr>
-                <tr>
-                  <td>250 g</td>
-                  <td>Rs. 350</td>
-                </tr>
-                <tr>
-                  <td>100 g</td>
-                  <td>Rs. 140</td>
-                </tr>
-              </table>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1400</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 700</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 350</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 140</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Content2" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Jardalu</h2>
-              <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
-                  <td>1 kg</td>
-                  <td>Rs. 800</td>
-                </tr>
-                <tr>
-                  <td>500 g</td>
-                  <td>Rs. 400</td>
-                </tr>
-                <tr>
-                  <td>250 g</td>
-                  <td>Rs. 200</td>
-                </tr>
-                <tr>
-                  <td>100 g</td>
-                  <td>Rs. 80</td>
-                </tr>
-              </table>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 800</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 400</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 80</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Content3" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Kismis</h2>
-              <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
-                  <td>1 kg</td>
-                  <td>Rs. 600</td>
-                </tr>
-                <tr>
-                  <td>500 g</td>
-                  <td>Rs. 300</td>
-                </tr>
-                <tr>
-                  <td>250 g</td>
-                  <td>Rs. 150</td>
-                </tr>
-                <tr>
-                  <td>100 g</td>
-                  <td>Rs. 60</td>
-                </tr>
-              </table>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 750</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 400</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 200</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 60</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Conten4" data-parent="#dryFruit4">
               <img src="images/KalaManuka.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Kala Manuka</h2>
-              <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
-                  <td>1 kg</td>
-                  <td>Rs. 680</td>
-                </tr>
-                <tr>
-                  <td>500 g</td>
-                  <td>Rs. 340</td>
-                </tr>
-                <tr>
-                  <td>250 g</td>
-                  <td>Rs. 170</td>
-                </tr>
-                <tr>
-                  <td>100 g</td>
-                  <td>Rs. 70</td>
-                </tr>
-              </table>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 680</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 340</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 170</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 70</span>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Content5" data-parent="#dryFruit4">
               <img src="images/Pistas.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Salted Pista</h2>
-              <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
-                  <td>1 kg</td>
-                  <td>Rs. 1800</td>
-                </tr>
-                <tr>
-                  <td>500 g</td>
-                  <td>Rs. 900</td>
-                </tr>
-                <tr>
-                  <td>250 g</td>
-                  <td>Rs. 450</td>
-                </tr>
-                <tr>
-                  <td>100 g</td>
-                  <td>Rs. 180</td>
-                </tr>
-              </table>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 1800</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 900</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 450</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">100g: + Rs. 180</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 product-border">
             <div data-toggle="collapse" data-target="#dryFruit4Content6" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
               <h2>Kala Khajur</h2>
-              <table class="table table-sm table-dark price-table table-bordered table-hover">
-                <tr>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-                <tr>
-                  <td>1 kg</td>
-                  <td>Rs. 320</td>
-                </tr>
-                <tr>
-                  <td>500 g</td>
-                  <td>Rs. 160</td>
-                </tr>
-                <tr>
-                  <td>250 g</td>
-                  <td>Rs. 80</td>
-                </tr>
-              </table>
+              <div class="price-div">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                  Quantity: + Price
+                </button>
+                <div class="price dropdown-menu">
+                  <span class="price dropdown-item" href="#">1kg: + Rs. 320</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">500g: + Rs. 160</span>
+                  <div class="dropdown-divider"></div>
+                  <span class="price dropdown-item" href="#">250g: + Rs. 80</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
