prices ui update 3

--- a/kelabros/components/nutrition.html
+++ b/kelabros/components/nutrition.html
@@ -39,13 +39,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 800</span>
+                  <span class="price dropdown-item">1kg: + Rs. 800</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 400</span>
+                  <span class="price dropdown-item">500g: + Rs. 400</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 200</span>
+                  <span class="price dropdown-item">250g: + Rs. 200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 80</span>
+                  <span class="price dropdown-item">100g: + Rs. 80</span>
                 </div>
               </div>
             </div>
@@ -59,13 +59,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 800</span>
+                  <span class="price dropdown-item">1kg: + Rs. 800</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 400</span>
+                  <span class="price dropdown-item">500g: + Rs. 400</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 200</span>
+                  <span class="price dropdown-item">250g: + Rs. 200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 80</span>
+                  <span class="price dropdown-item">100g: + Rs. 80</span>
                 </div>
               </div>
             </div>
@@ -79,13 +79,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1000</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1000</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 500</span>
+                  <span class="price dropdown-item">500g: + Rs. 500</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 250</span>
+                  <span class="price dropdown-item">250g: + Rs. 250</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 100</span>
+                  <span class="price dropdown-item">100g: + Rs. 100</span>
                 </div>
               </div>
             </div>
@@ -99,13 +99,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1000</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1000</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 500</span>
+                  <span class="price dropdown-item">500g: + Rs. 500</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 250</span>
+                  <span class="price dropdown-item">250g: + Rs. 250</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 100</span>
+                  <span class="price dropdown-item">100g: + Rs. 100</span>
                 </div>
               </div>
             </div>
@@ -161,13 +161,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
@@ -181,13 +181,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
@@ -201,13 +201,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
@@ -221,13 +221,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
@@ -241,13 +241,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
@@ -261,13 +261,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
@@ -281,13 +281,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
@@ -301,13 +301,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 2400</span>
+                  <span class="price dropdown-item">1kg: + Rs. 2400</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 1200</span>
+                  <span class="price dropdown-item">500g: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 600</span>
+                  <span class="price dropdown-item">250g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 240</span>
+                  <span class="price dropdown-item">100g: + Rs. 240</span>
                 </div>
               </div>
             </div>
@@ -321,9 +321,9 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">500g: + Rs. 500</span>
+                  <span class="price dropdown-item">500g: + Rs. 500</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 250</span>
+                  <span class="price dropdown-item">250g: + Rs. 250</span>
                 </div>
               </div>
             </div>
@@ -337,13 +337,13 @@
                   Quantity: + Price
                 </button>
                 <div class="price dropdown-menu">
-                  <span class="price dropdown-item" href="#">1kg: + Rs. 1200</span>
+                  <span class="price dropdown-item">1kg: + Rs. 1200</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">500g: + Rs. 600</span>
+                  <span class="price dropdown-item">500g: + Rs. 600</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">250g: + Rs. 300</span>
+                  <span class="price dropdown-item">250g: + Rs. 300</span>
                   <div class="dropdown-divider"></div>
-                  <span class="price dropdown-item" href="#">100g: + Rs. 120</span>
+                  <span class="price dropdown-item">100g: + Rs. 120</span>
                 </div>
               </div>
             </div>
