--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -73,10 +73,14 @@
   }
 
   .header-dropdown-menu {
-    background-color: "#542410" !important;
-    color: "#F09D61" !important;
-    position: "absolute" !important;
-    width: "100vw" !important;
+    background-color: #542410 !important;
+    color: #F09D61 !important;
+    position: absolute !important;
+    width: 100vw !important;
+  }
+
+  .header-dropdown-menu .dropdown-item {
+    color: #F09D61 !important;
   }
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
