generic ui fixes

--- a/kelabros/components/index.html
+++ b/kelabros/components/index.html
@@ -56,35 +56,29 @@
     <h3>Shop With US<br>This space is for PRODUCTS.</h3>
 
     <div class="container products-background">
-      <div class="products products-five row">
-        <div class="col-6 col-lg-2 col-sm-4">
+      <div class="products products-three row">
+        <div class="col-6 col-lg-3 col-sm-3">
           <a href="dryFruits.html">
             <img src="images/dryFruitsIndex.png" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Dry Fruits</h2>
           </a>
         </div>
-        <div class="col-6 col-lg-2 col-sm-4">
+        <div class="col-6 col-lg-3 col-sm-3">
           <a href="spices.html">
             <img src="images/spicesIndex.png" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Spices</h2>
           </a>
         </div>
-        <div class="col-6 col-lg-2 col-sm-4">
+        <div class="col-6 col-lg-3 col-sm-3">
           <a href="organics.html">
             <img src="images/bg1.jpg" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Organics</h2>
           </a>
         </div>
-        <div class="col-6 col-lg-2 col-sm-4">
+        <div class="col-6 col-lg-3 col-sm-3">
           <a href="nutrition.html">
             <img src="images/bg1.jpg" class="product-image rounded-circle border border-black" width="150" height="150">
             <h2>Nutrition</h2>
-          </a>
-        </div>
-        <div class="col-6 col-lg-2 col-sm-4">
-          <a href="exclusive.html">
-            <img src="images/bg1.jpg" class="product-image rounded-circle border border-white" width="150" height="150">
-            <h2>Exclusive</h2>
           </a>
         </div>
       </div>
