--- a/kelabros/components/spices.html
+++ b/kelabros/components/spices.html
@@ -32,7 +32,7 @@
       <div class="products products-three row">
         <div class="col-lg-4 col-md-4 col-sm-4 product-border">
           <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
-            <img src="images/Dalchini.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
+            <img src="images/Dalchinni.jpg" class="rounded-circle" alt="Cinque Terre" width="200" height="200">
             <h2>Dalchini</h2>
           </div>
         </div>
