--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -72,10 +72,15 @@
     font-size: 1.3rem;
   }
 
+  @media only screen and (min-device-width: 760px) {
+    .header-dropdown-menu{
+      position: absolute !important;
+    }
+  }
+
   .header-dropdown-menu {
     background-color: #542410 !important;
     color: #F09D61 !important;
-    position: absolute !important;
     width: 100vw !important;
   }
 
